[gd_scene load_steps=8 format=2]

[ext_resource path="res://_scenes/Level/Level.gd" type="Script" id=1]
[ext_resource path="res://_scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://_scenes/Wall/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://_scenes/Ceiling/Ceiling.tscn" type="PackedScene" id=4]
[ext_resource path="res://_scenes/Brick/Bricks.gd" type="Script" id=5]
[ext_resource path="res://_scenes/Brick/Brick.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 55.5 )

[node name="Level" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 688 )

[node name="Left" parent="." instance=ExtResource( 3 )]

[node name="Right" parent="." instance=ExtResource( 3 )]
position = Vector2( 1312, 0 )

[node name="Ceiling" parent="." instance=ExtResource( 4 )]

[node name="DeadZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone"]
position = Vector2( 640, 776.5 )
shape = SubResource( 1 )

[node name="Bricks" type="Node2D" parent="."]
position = Vector2( 0, 80 )
script = ExtResource( 5 )

[node name="Row 0" type="Node2D" parent="Bricks"]

[node name="Brick 0" parent="Bricks/Row 0" instance=ExtResource( 7 )]
position = Vector2( 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 1" parent="Bricks/Row 0" instance=ExtResource( 7 )]
position = Vector2( 162, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 2" parent="Bricks/Row 0" instance=ExtResource( 7 )]
position = Vector2( 322, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 3" parent="Bricks/Row 0" instance=ExtResource( 7 )]
position = Vector2( 482, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 4" parent="Bricks/Row 0" instance=ExtResource( 7 )]
position = Vector2( 642, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 5" parent="Bricks/Row 0" instance=ExtResource( 7 )]
position = Vector2( 802, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 6" parent="Bricks/Row 0" instance=ExtResource( 7 )]
position = Vector2( 962, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 7" parent="Bricks/Row 0" instance=ExtResource( 7 )]
position = Vector2( 1122, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Row 1" type="Node2D" parent="Bricks"]
position = Vector2( 0, 25 )

[node name="Brick 0" parent="Bricks/Row 1" instance=ExtResource( 7 )]
position = Vector2( 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 1" parent="Bricks/Row 1" instance=ExtResource( 7 )]
position = Vector2( 162, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 2" parent="Bricks/Row 1" instance=ExtResource( 7 )]
position = Vector2( 322, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 3" parent="Bricks/Row 1" instance=ExtResource( 7 )]
position = Vector2( 482, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 4" parent="Bricks/Row 1" instance=ExtResource( 7 )]
position = Vector2( 642, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 5" parent="Bricks/Row 1" instance=ExtResource( 7 )]
position = Vector2( 802, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 6" parent="Bricks/Row 1" instance=ExtResource( 7 )]
position = Vector2( 962, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 7" parent="Bricks/Row 1" instance=ExtResource( 7 )]
position = Vector2( 1122, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Row 2" type="Node2D" parent="Bricks"]
position = Vector2( 0, 60 )

[node name="Brick 0" parent="Bricks/Row 2" instance=ExtResource( 7 )]
position = Vector2( 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 1" parent="Bricks/Row 2" instance=ExtResource( 7 )]
position = Vector2( 162, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 2" parent="Bricks/Row 2" instance=ExtResource( 7 )]
position = Vector2( 322, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 3" parent="Bricks/Row 2" instance=ExtResource( 7 )]
position = Vector2( 482, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 4" parent="Bricks/Row 2" instance=ExtResource( 7 )]
position = Vector2( 642, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 5" parent="Bricks/Row 2" instance=ExtResource( 7 )]
position = Vector2( 802, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 6" parent="Bricks/Row 2" instance=ExtResource( 7 )]
position = Vector2( 962, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 7" parent="Bricks/Row 2" instance=ExtResource( 7 )]
position = Vector2( 1122, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Row 3" type="Node2D" parent="Bricks"]
position = Vector2( 0, 85 )

[node name="Brick 0" parent="Bricks/Row 3" instance=ExtResource( 7 )]
position = Vector2( 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 1" parent="Bricks/Row 3" instance=ExtResource( 7 )]
position = Vector2( 162, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 2" parent="Bricks/Row 3" instance=ExtResource( 7 )]
position = Vector2( 322, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 3" parent="Bricks/Row 3" instance=ExtResource( 7 )]
position = Vector2( 482, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 4" parent="Bricks/Row 3" instance=ExtResource( 7 )]
position = Vector2( 642, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 5" parent="Bricks/Row 3" instance=ExtResource( 7 )]
position = Vector2( 802, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 6" parent="Bricks/Row 3" instance=ExtResource( 7 )]
position = Vector2( 962, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 7" parent="Bricks/Row 3" instance=ExtResource( 7 )]
position = Vector2( 1122, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Row 4" type="Node2D" parent="Bricks"]
position = Vector2( 0, 120 )

[node name="Brick 0" parent="Bricks/Row 4" instance=ExtResource( 7 )]
position = Vector2( 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 1" parent="Bricks/Row 4" instance=ExtResource( 7 )]
position = Vector2( 162, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 2" parent="Bricks/Row 4" instance=ExtResource( 7 )]
position = Vector2( 322, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 3" parent="Bricks/Row 4" instance=ExtResource( 7 )]
position = Vector2( 482, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 4" parent="Bricks/Row 4" instance=ExtResource( 7 )]
position = Vector2( 642, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 5" parent="Bricks/Row 4" instance=ExtResource( 7 )]
position = Vector2( 802, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 6" parent="Bricks/Row 4" instance=ExtResource( 7 )]
position = Vector2( 962, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 7" parent="Bricks/Row 4" instance=ExtResource( 7 )]
position = Vector2( 1122, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Row 5" type="Node2D" parent="Bricks"]
position = Vector2( 0, 145 )

[node name="Brick 0" parent="Bricks/Row 5" instance=ExtResource( 7 )]
position = Vector2( 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 1" parent="Bricks/Row 5" instance=ExtResource( 7 )]
position = Vector2( 162, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 2" parent="Bricks/Row 5" instance=ExtResource( 7 )]
position = Vector2( 322, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 3" parent="Bricks/Row 5" instance=ExtResource( 7 )]
position = Vector2( 482, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 4" parent="Bricks/Row 5" instance=ExtResource( 7 )]
position = Vector2( 642, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 5" parent="Bricks/Row 5" instance=ExtResource( 7 )]
position = Vector2( 802, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 6" parent="Bricks/Row 5" instance=ExtResource( 7 )]
position = Vector2( 962, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 7" parent="Bricks/Row 5" instance=ExtResource( 7 )]
position = Vector2( 1122, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Row 6" type="Node2D" parent="Bricks"]
position = Vector2( 0, 180 )

[node name="Brick 0" parent="Bricks/Row 6" instance=ExtResource( 7 )]
position = Vector2( 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 1" parent="Bricks/Row 6" instance=ExtResource( 7 )]
position = Vector2( 162, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 2" parent="Bricks/Row 6" instance=ExtResource( 7 )]
position = Vector2( 322, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 3" parent="Bricks/Row 6" instance=ExtResource( 7 )]
position = Vector2( 482, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 4" parent="Bricks/Row 6" instance=ExtResource( 7 )]
position = Vector2( 642, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 5" parent="Bricks/Row 6" instance=ExtResource( 7 )]
position = Vector2( 802, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 6" parent="Bricks/Row 6" instance=ExtResource( 7 )]
position = Vector2( 962, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 7" parent="Bricks/Row 6" instance=ExtResource( 7 )]
position = Vector2( 1122, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Row 7" type="Node2D" parent="Bricks"]
position = Vector2( 0, 205 )

[node name="Brick 0" parent="Bricks/Row 7" instance=ExtResource( 7 )]
position = Vector2( 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 1" parent="Bricks/Row 7" instance=ExtResource( 7 )]
position = Vector2( 162, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 2" parent="Bricks/Row 7" instance=ExtResource( 7 )]
position = Vector2( 322, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 3" parent="Bricks/Row 7" instance=ExtResource( 7 )]
position = Vector2( 482, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 4" parent="Bricks/Row 7" instance=ExtResource( 7 )]
position = Vector2( 642, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 5" parent="Bricks/Row 7" instance=ExtResource( 7 )]
position = Vector2( 802, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 6" parent="Bricks/Row 7" instance=ExtResource( 7 )]
position = Vector2( 962, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Brick 7" parent="Bricks/Row 7" instance=ExtResource( 7 )]
position = Vector2( 1122, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="DeadZone" to="." method="_on_DeadZone_body_entered"]
[connection signal="broke" from="Bricks/Row 0/Brick 0" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 0/Brick 1" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 0/Brick 2" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 0/Brick 3" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 0/Brick 4" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 0/Brick 5" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 0/Brick 6" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 0/Brick 7" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 1/Brick 0" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 1/Brick 1" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 1/Brick 2" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 1/Brick 3" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 1/Brick 4" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 1/Brick 5" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 1/Brick 6" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 1/Brick 7" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 2/Brick 0" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 2/Brick 1" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 2/Brick 2" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 2/Brick 3" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 2/Brick 4" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 2/Brick 5" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 2/Brick 6" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 2/Brick 7" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 3/Brick 0" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 3/Brick 1" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 3/Brick 2" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 3/Brick 3" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 3/Brick 4" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 3/Brick 5" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 3/Brick 6" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 3/Brick 7" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 4/Brick 0" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 4/Brick 1" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 4/Brick 2" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 4/Brick 3" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 4/Brick 4" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 4/Brick 5" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 4/Brick 6" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 4/Brick 7" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 5/Brick 0" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 5/Brick 1" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 5/Brick 2" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 5/Brick 3" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 5/Brick 4" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 5/Brick 5" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 5/Brick 6" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 5/Brick 7" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 6/Brick 0" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 6/Brick 1" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 6/Brick 2" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 6/Brick 3" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 6/Brick 4" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 6/Brick 5" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 6/Brick 6" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 6/Brick 7" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 7/Brick 0" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 7/Brick 1" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 7/Brick 2" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 7/Brick 3" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 7/Brick 4" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 7/Brick 5" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 7/Brick 6" to="Bricks" method="_on_Brick_broke"]
[connection signal="broke" from="Bricks/Row 7/Brick 7" to="Bricks" method="_on_Brick_broke"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
